<resources>
    <string name="app_name">April</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">Password Baru</string>
    <string name="prompt_confirm_new_password">Konfirmasi Password Baru</string>
    <string name="complete_name">Nama Lengkap</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_submit">Kirim</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_empty_data">Kolom ini harus diisi</string>
    <string name="error_invalid_password">Password minimal 8 karakter</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_location">Location service need to be enabled to use this application.</string>
    <string name="label_location">Location service</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="survey_object_data">Data</string>
    <string name="survey_object_ground">Tanah</string>
    <string name="survey_object_building">Bangunan</string>
    <string name="survey_object_environmrnt">Lingkungan</string>
    <string name="survey_object_pic">Foto</string>
    <string name="survey_object_loc">Lokasi</string>
    <string name="survey_object_sign">Persetujuan</string>
    <string name="survey_location">Lokasi Obyek Jaminan</string>
    <string name="survey_address">Alamat Obyek:</string>
    <string name="survey_address_kelurahan">Kelurahan:</string>
    <string name="survey_address_kecamatan">Kecamatan:</string>
    <string name="survey_address_postal_code">Kode Pos:</string>
    <string name="survey_address_postal_city">Kota/Kabupaten:</string>
    <string name="survey_address_province">Provinsi:</string>
    <string name="survey_set_location">Ubah Lokasi</string>
    <string name="survey_disclaimer">Dengan membubuhkan tanda tangan pada aplikasi April, saya menyetujui segala ketentuan yang dinyatakan pada aplikasi April. Semua data yang tertera saya jamin adalah sesuai dengan kebenaran.</string>
    <string name="action_signature">TANDA TANGAN</string>
    <string name="action_add_pic">TAMBAH FOTO</string>
    <string name="action_next">SELANJUTNYA</string>
    <string name="delete">Hapus</string>
    <string name="save">Selesai</string>
    <string name="desc">Deskripsi</string>
    <string name="pic_desc">Deskripsi Foto</string>
    <string name="input_error">Deskripsi tidak boleh kosong</string>
    <string name="delete_pic">Hapus foto</string>
    <string name="delete_pic_confirmation">Anda yakin ingin menghapus foto ini?</string>
    <string name="pic_object">Foto Obyek Jaminan</string>
    <string name="pic_comparator">Foto Obyek Pembanding</string>
    <string name="click_to_describe">Klik gambar untuk menambahkan deskripsi foto.</string>
    <string name="survey_data">Data Jaminan</string>
    <string name="survey_field_kind">Jenis aset/jaminan:</string>
    <string name="survey_field_certificate">Sertipikat:</string>
    <string name="survey_field_certificate_no">Nomor Sertipikat:</string>
    <string name="survey_field_certificate_exp">Jatuh Tempo Sertipikat:</string>
    <string name="survey_field_certificate_name">Nama Pemilik Sertipikat:</string>
    <string name="survey_field_ground_size">Luas Tanah (m2):</string>
    <string name="survey_field_relation">Hubungan Dengan Debitur:</string>
    <string name="survey_field_notes">Keterangan Obyek Jaminan:</string>
    <string name="survey_ground_data">Data Tanah</string>
    <string name="survey_section_ground_line">Batas Tanah</string>
    <string name="survey_field_ground_front">Sisi Depan:</string>
    <string name="survey_field_ground_behind">Sisi Belakang:</string>
    <string name="survey_field_ground_left">Sisi Kiri:</string>
    <string name="survey_field_ground_kanan">Sisi Kanan:</string>
    <string name="survey_field_ground_elevation">Elevasi Terhadap Jalan di Depan:</string>
    <string name="survey_section_ground_condition">Kondisi Tanah</string>
    <string name="survey_field_ground_contur">Kontur Tanah:</string>
    <string name="survey_field_ground_kind">Jenis Tanah:</string>
    <string name="survey_field_ground_position">Posisi Tanah:</string>
    <string name="survey_field_ground_orientation">Orientasi Tanah:</string>
    <string name="survey_field_ground_shape">Bentuk Tanah:</string>
    <string name="survey_section_ground_state">Status Tanah</string>
    <string name="survey_field_ground_state">Status Obyek Tanah:</string>
    <string name="survey_field_ground_renter_name">Nama Penyewa:</string>
    <string name="survey_field_ground_rent_duration">Lama Sewa (bulan):</string>
    <string name="survey_building_data">Data Bangunan</string>
    <string name="survey_section_building_spec">Spesifikasi Bangunan</string>
    <string name="survey_field_building_kind">Jenis Bangunan:</string>
    <string name="survey_field_building_size_imb">Luas Bangunan Sesuai IMB (m2):</string>
    <string name="survey_field_building_size_actual">Luas Bangunan Fisik (m2):</string>
    <string name="survey_field_building_built_year">Tahun Pembangunan:</string>
    <string name="survey_field_building_renov_year">Tahun Renovasi:</string>
    <string name="survey_field_building_imb_no">Nomor IMB:</string>
    <string name="survey_field_building_floor_no">Jumlah Lantai:</string>
    <string name="survey_field_building_structure">Struktur Bangunan:</string>
    <string name="survey_field_building_floor_kind">Jenis Lantai:</string>
    <string name="survey_field_building_wall_kind">Jenis Dinding:</string>
    <string name="survey_field_building_plafon_kind">Jenis Plafon:</string>
    <string name="survey_field_building_roof_level">Atap:</string>
    <string name="survey_field_building_window_door_kind">Jenis Pintu dan Jendela:</string>
    <string name="survey_field_building_stair_kind">Jenis Tangga:</string>
    <string name="survey_field_building_class">Kelas Bangunan:</string>
    <string name="survey_section_building_facility">Fasilitas Bangunan</string>
    <string name="survey_field_building_electricity">Sambungan Listrik:</string>
    <string name="survey_field_building_electricity_capacity">Kapasitas Listrik (KWH):</string>
    <string name="survey_field_building_water">Air Bersih:</string>
    <string name="survey_field_building_phone_line">Sambungan Telepon:</string>
    <string name="survey_field_building_phone_line_no">Jumlah Line Telepon:</string>
    <string name="survey_field_building_car_park">Tempat Parkir:</string>
    <string name="survey_field_building_car_park_capacity">Luas Tempat Parkir (m2):</string>
    <string name="survey_field_building_gate">Pagar:</string>
    <string name="survey_field_building_fire_rescue">Pemadam Kebakaran:</string>
    <string name="survey_field_other_facility">Sarana lainnya:</string>
    <string name="survey_environment_data">Data Lingkungan</string>
    <string name="survey_comparation_data">Informasi Harga &#038; Data Pembanding</string>
    <string name="survey_section_environment">Informasi Umum</string>
    <string name="survey_field_area">Wilayah:</string>
    <string name="survey_field_for">Peruntukan:</string>
    <string name="survey_field_for_existing">Penggunaan Lahan Existing:</string>
    <string name="survey_field_decoration">Penataan Ruangan Lingkungan:</string>
    <string name="survey_section_environment_facility">Fasilitas Lingkungan</string>
    <string name="survey_section_comparation1">Data 1</string>
    <string name="survey_section_comparation2">Data 2</string>
    <string name="survey_section_comparation3">Data 3</string>
    <string name="survey_field_electricity">Jaringan Listrik:</string>
    <string name="survey_field_phone">Jaringan Telepon:</string>
    <string name="survey_field_water">Jaringan Air Bersih:</string>
    <string name="survey_field_lighting">Penerangan Jalan:</string>
    <string name="survey_comparation_address">Alamat/lokasi:</string>
    <string name="survey_comparation_subdistrict">Kelurahan/desa:</string>
    <string name="survey_comparation_district">Kecamatan:</string>
    <string name="survey_comparation_city">Kodya/Kab:</string>
    <string name="survey_comparation_contact_person">Kontak Person:</string>
    <string name="survey_comparation_phone_no">No. Telepon:</string>
    <string name="survey_comparation_status">Status Data:</string>
    <string name="survey_comparation_price">Harga (Rp. ,00):</string>
    <string name="survey_comparation_property_type">Jenis Properti:</string>
    <string name="survey_comparation_land_area">Luas Tanah (m2):</string>
    <string name="survey_comparation_for">Peruntukan:</string>
    <string name="survey_comparation_license">Bukti Kepemilikan:</string>
    <string name="survey_comparation_street_size">Lebar Jalan (m):</string>
    <string name="survey_comparation_land_position">Posisi Tanah:</string>
    <string name="survey_comparation_contur">Kontur Tanah:</string>
    <string name="survey_comparation_land_shape">Bentuk Tanah:</string>
    <string name="survey_comparation_building_condition">Kondisi Bangunan:</string>
    <string name="survey_comparation_building_area">Luas Bangunan (m2):</string>
    <string name="survey_comparation_building_class">Kelas Bangunan:</string>
    <string name="survey_comparation_building_floor">Jumlah Lantai:</string>
    <string name="survey_section_environment_analysis">Analisa Lokasi</string>
    <string name="survey_field_access_level">Kemudahan Akses &#038; Transportasi:</string>
    <string name="survey_field_shop_level">Kemudahan Berbelanja:</string>
    <string name="survey_field_school_level">Kemudahan Ke Sekolah:</string>
    <string name="survey_field_holiday_level">Kemudahan Rekreasi:</string>
    <string name="survey_field_shopping_center">Pusat Perbelanjaan:</string>
    <string name="survey_field_education_center">Sarana Pendidikan:</string>
    <string name="survey_field_health_center">Rumah Sakit/Klinik:</string>
    <string name="survey_field_pray_center">Tempat Ibadah:</string>
    <string name="survey_field_safe_facility">Fasilitas Keamanan:</string>
    <string name="survey_field_transport">Sarana Transportasi:</string>
    <string name="survey_section_environment_road_front">Jalan di Depan Agunan</string>
    <string name="survey_field_road_front">Jalan di Depan Properti:</string>
    <string name="survey_field_road_construction">Konstruksi Jalan:</string>
    <string name="survey_field_road_width">Lebar Badan Jalan (meter):</string>
    <string name="survey_field_road_condition">Kondisi Jalan:</string>
    <string name="survey_field_road_drainase">Drainase Jalan:</string>
    <string name="survey_field_road_maintenance">Pemeliharaan Jalan:</string>
    <string name="survey_field_road_green">Penghijauan:</string>
    <string name="survey_field_road_design">Penataan Lingkungan:</string>
    <string name="survey_section_environment_risk_potency">Potensi Risiko</string>
    <string name="survey_field_risk_fire">Risiko Kebakaran:</string>
    <string name="survey_field_risk_disaster">Risiko Bencana Alam:</string>
    <string name="survey_field_risk_fallground">Risiko Longsor:</string>
    <string name="survey_field_risk_flood">Risiko Banjir:</string>
    <string name="survey_field_risk_das_distance">Jarak Dengan DAS (~meter): </string>
    <string name="survey_field_risk_grave_distance">Jarak Dengan Makam (~meter):</string>
</resources>