<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_ground_data"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <com.emilsjolander.components.StickyScrollViewItems.StickyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="vertical">

            <FrameLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:tag="sticky">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_section_ground_line"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="0dp"/>
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/txtLineFront"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_front"
                    android:inputType="none"
                    android:maxLines="1"
                    android:textSize="13sp"
                    android:focusableInTouchMode="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtLineBehind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_behind"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtLineLeft"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_left"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtLineRight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_kanan"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtElevation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_elevation"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:tag="sticky">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_section_ground_condition"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="0dp"/>
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/txtGroundContur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_contur"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtGroundKind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_kind"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtGroundPosition"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_position"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtGroundOrientation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_orientation"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtGroundShape"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_shape"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:tag="sticky">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_section_ground_state"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="0dp"/>
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/txtGroundState"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_state"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtGroundRenterName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_renter_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtGroundRentDuration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_rent_duration"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_rounded_primary_clickable"
                android:textColor="@color/white"
                android:text="@string/action_next"/>
        </LinearLayout>
    </com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>

</LinearLayout>