<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_data"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtObjectKind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_kind"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtCertificate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_certificate"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtCertificateNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_certificate_no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtCertExpiration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_certificate_exp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtCertName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_certificate_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtGroundSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_ground_size"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtRelation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_relation"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtNotes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/survey_field_notes"
                    android:inputType="textMultiLine"
                    android:maxLines="1"
                    android:textSize="13sp"
                    android:lines="3"
                    android:minLines="2"
                    android:gravity="top"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_rounded_primary_clickable"
                android:textColor="@color/white"
                android:text="@string/action_next"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>